Format swagger api response definitions
